# rpios

./: Cargo.toml  build.rs  flake.nix
.cargo/: config.toml
.github/workflows/: dev.yml
.helix/: languages.toml
src/: bsp.rs  cpu.rs  main.rs  panic_wait.rs
src/_arch/aarch64/: cpu.rs
src/_arch/aarch64/cpu/: boot.rs  boot.s
src/bsp/: raspberrypi.rs
src/bsp/raspberrypi/: cpu.rs  kernel.ld
src/cpu/: boot.rs
